@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-16T08:13:30Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "timestamp" : "2022-06-16T16:13:00Z",
+  "count" : 6,
+  "count_minmax" : [ 2, 6 ],
+  "count_decinc" : [ -0, +6 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
