@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 12,
   "uniques": 1,
   "views": [
     {
@@ -19,7 +19,7 @@
     },
     {
       "timestamp": "2022-06-16T00:00:00Z",
-      "count": 2,
+      "count": 6,
       "uniques": 1
     }
   ]
