@@ -1,3 +1,10 @@
+2022-06-16T16:13:00Z:
+* notice: last 14d: unq all: 1 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 23 404 / 27 412
+* notice: next accum: outdated-unq outdated-all / unq all: 23 404 / 27 416
+* notice: prev exec diff / last date diff / accum: unq all: +0 +4 -0 -0 / +1 +6 -0 -0 / 1 6
+* notice: removed / changed dates: [] / [2022-06-16]
+
 2022-06-16T08:13:30Z:
 * notice: last 14d: unq all: 1 8
 * notice: prev accum: outdated-unq outdated-all / unq all: 22 398 / 26 410
